--- a/myturn.html
+++ b/myturn.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
         body {
-            background-color: #D3D3D3; /* Classic Windows Gray */
+            background-color: #D3D3D3;
             color: #000000;
             font-family: "Times New Roman", Times, serif;
             margin: 0;
@@ -44,7 +44,7 @@
         }
         h2 {
             font-size: 14pt;
-            background-color: #000080; /* Navy Blue */
+            background-color: #000080;
             color: #FFFFFF;
             padding: 4px 10px;
             margin-top: 30px;
@@ -68,7 +68,7 @@
         .notice-text {
             border: 1px solid #000;
             padding: 10px;
-            background-color: #FFFFE1; /* Post-it Yellow */
+            background-color: #FFFFE1; 
             font-size: 11pt;
             margin-bottom: 20px;
         }
@@ -176,7 +176,7 @@
     </div>
     
     <div class="footer-nav">
-        &copy; 5758-5786 BUREAU OF PUBLIC CORRESPONDENCE & GRIEVANCES<br>
+        &copy; 5758-5786 <br> BUREAU OF PUBLIC CORRESPONDENCE & GRIEVANCES<br>
         [ <a href="#" onclick="location.reload()">Refresh Ledger</a> ] - [ <a href="#">Return to Top</a> ]
     </div>
 </div>
@@ -287,3 +287,4 @@
 </body>
 
 </html>
+
