--- a/myturn.html
+++ b/myturn.html
@@ -213,7 +213,7 @@
         });
 
     
-        return formatter.format(date) + " A.M.";
+        return formatter.format(date);
     }
 
     function reportError(msg) {
@@ -306,4 +306,5 @@
 
 </body>
 </html>
+
 
